オンプレのWSで動かす用にDocker設定ファイルを更新

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,44 @@
-FROM pytorch/pytorch:latest
+FROM nvcr.io/nvidia/pytorch:23.05-py3
 
-RUN apt-get update && apt-get install -y curl tar unzip
+ENV TZ=Asia/Tokyo \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=on \
+    PIP_NO_CACHE_DIR=on
+
+# install and setup root certificates
+RUN mkdir -p /usr/share/ca-certificates/ncvc
+RUN curl -o /usr/share/ca-certificates/ncvc/NCVC-SSL-Decryption-CA-trust.crt https://portal.ncvc.go.jp/wp-content/uploads/NCVC-SSL-Decryption-CA-trust.crt
+RUN echo "ncvc/NCVC-SSL-Decryption-CA-trust.crt" >> /etc/ca-certificates.conf
+RUN update-ca-certificates
+
+ENV CERT_PATH=/etc/ssl/certs/NCVC-SSL-Decryption-CA-trust.pem \
+    CERT_DIR=/etc/ssl/certs/
+ENV SSL_CERT_FILE=${CERT_PATH} \ 
+    SSL_CERT_DIR=${CERT_DIR} \
+    REQUESTS_CA_BUNDLE=${CERT_PATH}
+
+# install graphviz
+RUN apt-get update && apt-get install -y graphviz
+
+# ssl
+RUN echo "Options = UnsafeLegacyRenegotiation" >> /etc/ssl/openssl.cnf
+
+# setup pip.conf and install packages
+RUN { \
+       echo "[global]"; \
+       echo "no-cache-dir = true"; \
+       echo "index-url = https://pypi.org/simple"; \
+       echo "trusted-host = pypi.python.org pypi.org files.pythonhosted.org"; \
+       echo "cert = /usr/share/ca-certificates/ncvc/NCVC-SSL-Decryption-CA-trust.crt"; \
+    } | tee /usr/pip.conf /root/.config/pip/pip.conf /root/.pip/pip.conf /etc/pip.conf /etc/xdg/pip/pip.conf
 COPY requirements.txt /root/
 RUN pip install -U pip && pip install -r /root/requirements.txt
-CMD jupyter lab --ip 0.0.0.0 --port 8888 --allow-root
+
+# jupyterlab user settings at /root
+# RUN mkdir -p /root/.jupyter/lab/user-settings/@jupyterlab && cd $_ && \
+#     mkdir apputils-extension docmanager-extension notebook-extension && \
+#     echo -n '{"theme": "JupyterLab Dark", "theme-scrollbars": true, "overrides": {"code-font-family": "HackGen35 Console", "code-font-size": "12", "content-font-family": null, "content-font-size1": "12", "ui-font-family": null, "ui-font-size1": null}}' > apputils-extension/themes.jupyterlab-settings && \
+#     echo -n '{"autosave": false}' > docmanager-extension/plugin.jupyterlab-settings && \
+#     echo -n '{"codeCellConfig": {"lineNumbers": true,},}' > notebook-extension/tracker.jupyterlab-settings
+
+# CMD jupyter lab --ip 0.0.0.0 --port 8888 --allow-root
